--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <button id="inc" onclick="increment()">increment</button>
     <button id="dec" onclick="decrement()">Decrement</button>
     <button id="save-btn" onclick="store()">save</button>
+    <button id="reset-btn" onclick="store()">reset</button>
     </div>
     <p id="save-el"> previous entries:</p>
   
