--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div class="container">
     <button id="inc" onclick="increment()">increment</button>
     <button id="dec" onclick="decrement()">Decrement</button>
-    <button id="save-btn" onclick="store()">save</button>
-    <button id="reset-btn" onclick="store()">reset</button>
+    <button id="save-btn" onclick="save()">save</button>
+    <!--<button id="reset-btn" onclick="reset()">reset</button>-->
     </div>
-    <p id="save-el"> previous entries:</p>
+    <p id="save-el">previous entries:</p>
   
   
  
